[tool.poetry]
name = "docs-appimage-org"
description = "AppImage documentation"
authors = [
    "TheAssassin <theassassin@assassinate-you.net>",
    "AppImage Team & Contributors",
]
readme = "README.md"
packages = [{include = "docs"}]
package-mode = false

[tool.poetry.dependencies]
Python = "^3.12"
sphinx = "^8"
sphinx-git = "^11"
sphinxext-rediraffe = "^0.3.0"
sphinx-last-updated-by-git = "^0.3.8"
sphinx-autobuild = "^2025.8.25"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
